<resources>
    <string name="app_name">My Baking Recipes</string>
    <string name="RECIPES_KEY">recipes_key</string>
    <string name="ingredients_list_title">Ingredients:</string>
    <string name="RECIPE_KEY">recipe_key</string>
    <string name="introduction_title">Introduction:</string>
    <string name="steps_list_title">Instructions:</string>
    <string name="STEPS_KEY">steps_key</string>
    <string name="STEP_NUMBER_KEY">step_number_key</string>
    <string name="RECIPE_NAME_KEY">recipe_name_key</string>
    <string name="step_description_title">Description:</string>
    <string name="step_thumbnail">Step thumbnail</string>
    <string name="previous">Prev.</string>
    <string name="next">Next</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="LAYOUT_MANAGER_KEY">layout_manager_key</string>
    <string name="SCROLL_VIEW_POSITION_KEY">scroll_view_position_key</string>
    <string name="VIDEO_PLAYER_POSITION_KEY">video_player_position_key</string>
    <string name="VIDEO_PLAYER_PLAY_WHEN_READY_KEY">play_when_ready</string>
    <string name="CURRENT_STEP_KEY">current_step_key</string>
</resources>
