<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.baking.chris.mybakingrecipes.StepActivity">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/step_exo_player_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:rewind_increment="2000"
        app:fastforward_increment="2000"
        app:layout_constraintDimensionRatio="W,6:9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_step_thumbnail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/step_thumbnail"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="@id/step_exo_player_view"
        app:layout_constraintEnd_toEndOf="@id/step_exo_player_view"
        app:layout_constraintTop_toTopOf="@id/step_exo_player_view"
        app:layout_constraintBottom_toBottomOf="@id/step_exo_player_view"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_step_description_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Cursive.Title"
        android:text="@string/step_description_title"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_goneMarginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/step_exo_player_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_step_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_background_light"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="@id/tv_step_description_title"
        app:layout_constraintEnd_toEndOf="@id/tv_step_description_title"
        app:layout_constraintTop_toBottomOf="@id/tv_step_description_title"/>
    <Button
        android:id="@+id/btn_prev_step"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:text="@string/previous"
        android:background="@drawable/round_background_light"
        android:onClick="onStepChanged"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_next_step"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btn_next_step"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:text="@string/next"
        android:background="@drawable/round_background_light"
        android:onClick="onStepChanged"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_prev_step"
        app:layout_constraintEnd_toEndOf="parent"/>



</android.support.constraint.ConstraintLayout>
